# ProyectoII-DatosII-Lets-play

./: CMakeLists.txt  main.cpp
AlgoritmoG/: Genetic.cpp  Genetic.h  GeneticPrueba.cpp  Individuo.cpp  Individuo.h
BT/: BackTrackingSearch.cpp  BackTrackingSearch.h
BT/BTListRegister/: BTLinkedList.cpp  BTLinkedList.h  LLNode.cpp  LLNode.h  LinkedList.cpp  LinkedList.h
Docs/latex/: refman.tex  (+20 more)
GameManagment/: Ball.cpp  Ball.h  Board.cpp  Board.h  Scores.cpp  Scores.h
Graphics/: BoardDisplay.cpp  BoardDisplay.h  Button.cpp  Button.h  GeneticDisplay.cpp  GeneticDisplay.h  Menu.cpp  Menu.h
ImageCutting/: Cutter.cpp  Cutter.h
ImageLoading/: FileLoader.cpp  FileLoader.h
PathfindingA/: LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  PathfindingA.cpp  PathfindingA.h
Physics/: Movement.cpp  Movement.h
Server/: Server.cpp
XMLS/: generation0.xml  generation1.xml  generation10.xml  generation11.xml  generation12.xml  generation13.xml  generation14.xml  generation15.xml  generation16.xml  generation17.xml  generation18.xml  generation19.xml  generation2.xml  generation20.xml  generation21.xml  generation22.xml  generation23.xml  generation24.xml  generation25.xml  generation26.xml  generation27.xml  generation28.xml  generation29.xml  generation3.xml  generation30.xml  generation31.xml  generation32.xml  generation33.xml  generation34.xml  generation35.xml  generation36.xml  generation37.xml  generation38.xml  generation39.xml  generation4.xml  generation40.xml  generation41.xml  generation42.xml  generation43.xml  generation44.xml  (+24 more)
cmake_modules/: FindTinyXML.cmake
(+121 files in other folders)
